--- a/paper/noisy_kids.bib
+++ b/paper/noisy_kids.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Dan Yurovsky at 2015-09-24 13:32:35 -0700 
+%% Created for Michael Frank at 2015-09-28 14:56:09 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,12 +12,12 @@
 @article{creel2012,
 	Author = {Creel, Sarah C},
 	Date-Added = {2015-09-24 20:32:32 +0000},
-	Date-Modified = {2015-09-24 20:32:35 +0000},
-	Journal = {Child development},
+	Date-Modified = {2015-09-28 21:56:08 +0000},
+	Journal = {Child Development},
 	Number = {6},
 	Pages = {2042--2056},
 	Publisher = {Wiley Online Library},
-	Title = {Preschoolers Use of Talker Information in On-Line Comprehension},
+	Title = {Preschoolers' Use of Talker Information in On-Line Comprehension},
 	Volume = {83},
 	Year = {2012}}
 
