--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -8,7 +8,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 
-\title{Adults and preschoolers flexibly adapt to noisy linguistic input}
+\title{Preschoolers flexibly adapt to noisy linguistic input}
 \author{Daniel Yurovsky, Sarah Case, and Michael C. Frank}
 \affiliation{Stanford University}
 \shorttitle{Noisy Kids}
@@ -49,7 +49,9 @@ Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she v
 
 Noisy channel principles provide a powerful framework for explaining how the human language processing system operates in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of this kind of integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (e.g., the omission of the word ``to''). Adult comprehenders were able to correct these errors, and critically corrected them at higher rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, they corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible. Together, these results suggested a flexible weighting of information from the perceptual signal and from speaker expectations. 
 
-Do children also process language in the same flexible, expectation-based way? Though to our knowledge no experiments directly test this question, relevant prior work is mixed. On one hand, infants and toddlers already make use of speakers' social and pragmatic cues to reference to shape their expectations about linguistic meaning \cite{clark2009, carpenter1998}. And preschoolers show evidence of encoding stable features like the reliability of individual speakers, a clear prerequisite for forming communicative expectations \cite{koenig2004, harris2012}. On the other hand, children at the same ages sometimes show striking deficits in inferring speakers' intended meaning---and revising incorrect expectations about meaning---in cases where syntax \cite{trueswell1999} and semantics \cite{noveck2001} are ambiguous. These failures are seen, however, in complex contexts that were designed to test the development of other abilities; none were intended to make a direct and straightforward test of expectation-based integration in the absence of other processing demands. Our current experiments thus attempt to make such a test. 
+Do children also process language in the same flexible, expectation-based way? Such flexibility would be important for making efficient use of input in complex and varied linguistic environments. In addition, developmental evidence on noisy-channel processing contributes to an understanding of the origins of processing ability. Though to our knowledge no experiments directly test noisy channel models in childhood, relevant prior work is mixed. 
+
+On one hand, infants and toddlers already make use of speakers' social and pragmatic cues to reference to shape their expectations about linguistic meaning \cite{carpenter1998, clark2009, creel2012}. On the other hand, children sometimes show striking deficits in revising incorrect expectations about meaning in cases where syntax is ambiguous \cite{trueswell1999}. These failures are seen, however, in complex contexts that were designed to test the development of other abilities. Our current experiments attempt a test of expectation-based integration in the absence of other processing demands. 
 
 We created a paradigm that allowed independent manipulation of both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and, as a control group, adults) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content (Figure \ref{fig:test}). We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability.
 
@@ -141,9 +143,9 @@ Finally, one alternative explanation for the difference between Speaker conditio
 
 When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise and ambiguity inherent in linguistic communication, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of this kind of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction is borne out in adult listeners across domains in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}. The experiments in this paper provide evidence that this adaptive expectation-based language processing is already available to 4--5 year old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh their reliance on each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
 
-While the size of the adaptation effect was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not: Children relied more on their top-down expectations than the perceptual signal. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Relatedly, the noisy channel framework makes a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more the acoustic signal.
+In our data, while the size of the adaptation effect was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not. Children relied more on their top-down expectations than the perceptual signal. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Relatedly, the noisy channel framework makes a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more the acoustic signal.
 
-One puzzle of the broader literature on the development of language comprehension is that children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's use of higher-level expectations should be relative to the reliability of their model of the relevant domain. Thus, children should---and do---integrate expectations when the relevant models are over speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children tend to fail in cases where the relevant models include difficult linguistic content like quantifier semantics or complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. 
+% One puzzle of the broader literature on the development of language comprehension is that children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's use of higher-level expectations should be relative to the reliability of their model of the relevant domain. Thus, children should---and do---integrate expectations when the relevant models are over speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children tend to fail in cases where the relevant models include difficult linguistic content like quantifier semantics or complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. 
 % However, based on prior evidence that children's understanding of quantifiers is limited, as is their exposure to relative clauses, this is exactly the result a noisy channel framework for speech processing would predict  \cite{barner2011, montag2015}.
 
 Our work here suggests that the noisy channel framework offers a route to understanding both children's and adults' language processing, as well as how one develops from the other. Within this framework, processing is characterized by the interaction between two models: one of perception, and one of expectation. The content and level of description for these models are outstanding questions, however. One possibility is that expectations are fundamentally about speakers, and that linguistic communication is essentially pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distributions of words, referents, and their mutual predictability. We hope that the paradigm we have developed here will be a tool for helping to resolve this fundamental tension. 
