paper submission push

--- a/paper/noisy_kids.bib
+++ b/paper/noisy_kids.bib
@@ -2,19 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Michael Frank at 2015-09-28 14:56:09 -0700 
+%% Created for Dan Yurovsky at 2015-09-30 11:45:35 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{lew-williams2007,
+	Author = {Lew-Williams, Casey and Fernald, Anne},
+	Date-Added = {2015-09-30 18:45:24 +0000},
+	Date-Modified = {2015-09-30 18:45:35 +0000},
+	Journal = {Psychological Science},
+	Pages = {193--198},
+	Title = {{Young Children Learning Spanish Make Rapid Use of Grammatical Gender in Spoken Word Recognition}},
+	Volume = {18},
+	Year = {2007}}
+
 @article{creel2012,
 	Author = {Creel, Sarah C},
 	Date-Added = {2015-09-24 20:32:32 +0000},
-	Date-Modified = {2015-09-28 21:56:08 +0000},
+	Date-Modified = {2015-09-28 22:07:20 +0000},
 	Journal = {Child Development},
-	Number = {6},
 	Pages = {2042--2056},
 	Publisher = {Wiley Online Library},
 	Title = {Preschoolers' Use of Talker Information in On-Line Comprehension},
@@ -24,9 +33,8 @@
 @article{lyons2011,
 	Author = {Lyons, Kristen E and Ghetti, Simona},
 	Date-Added = {2015-09-24 20:18:59 +0000},
-	Date-Modified = {2015-09-24 20:19:05 +0000},
-	Journal = {Child development},
-	Number = {6},
+	Date-Modified = {2015-09-28 22:12:57 +0000},
+	Journal = {Child Development},
 	Pages = {1778--1787},
 	Publisher = {Wiley Online Library},
 	Title = {The development of uncertainty monitoring in early childhood},
@@ -36,9 +44,8 @@
 @article{frank2012,
 	Author = {Frank, Michael C and Goodman, Noah D},
 	Date-Added = {2015-09-24 20:03:07 +0000},
-	Date-Modified = {2015-09-24 20:03:24 +0000},
+	Date-Modified = {2015-09-28 22:07:40 +0000},
 	Journal = {Science},
-	Number = {6084},
 	Pages = {998},
 	Publisher = {American Association for the Advancement of Science},
 	Title = {Predicting pragmatic reasoning in language games},
@@ -48,8 +55,8 @@
 @book{clark1996,
 	Author = {Clark, Herbert H},
 	Date-Added = {2015-09-24 20:02:55 +0000},
-	Date-Modified = {2015-09-24 20:03:11 +0000},
-	Publisher = {Cambridge university press},
+	Date-Modified = {2015-09-28 22:16:49 +0000},
+	Publisher = {Cambridge University Press},
 	Title = {Using language},
 	Year = {1996}}
 
@@ -96,9 +103,11 @@
 @article{neuman1983,
 	Author = {Neuman, A C and Hochberg, I},
 	Date-Added = {2015-09-21 18:13:15 +0000},
-	Date-Modified = {2015-09-21 18:13:16 +0000},
-	Journal = {The Journal of the Acoustical Society of {\ldots}},
+	Date-Modified = {2015-09-28 22:14:14 +0000},
+	Journal = {The Journal of the Acoustical Society of America},
+	Pages = {2145--2149},
 	Title = {{Children's perception of speech in reverberation}},
+	Volume = {73},
 	Year = {1983}}
 
 @article{noveck2001,
@@ -124,8 +133,8 @@
 @article{carpenter1998,
 	Author = {Carpenter, Malinda and Nagell, Katherine and Tomasello, Michael and Butterworth, George and Moore, Chris},
 	Date-Added = {2015-09-18 22:10:59 +0000},
-	Date-Modified = {2015-09-18 22:11:00 +0000},
-	Journal = {Monographs of the society for research in child development},
+	Date-Modified = {2015-09-28 22:05:38 +0000},
+	Journal = {Monographs of the Society for Research in Child Development},
 	Pages = {i--174},
 	Publisher = {JSTOR},
 	Title = {Social cognition, joint attention, and communicative competence from 9 to 15 months of age},
@@ -152,17 +161,21 @@
 @article{kleinschmidt2015,
 	Author = {Kleinschmidt, D F and Jaeger, T F},
 	Date-Added = {2015-09-18 20:38:59 +0000},
-	Date-Modified = {2015-09-18 20:39:00 +0000},
+	Date-Modified = {2015-09-28 22:12:28 +0000},
 	Journal = {Psychological Review},
+	Pages = {148--203},
 	Title = {{Robust speech perception: Recognize the familiar, generalize to the similar, and adapt to the novel.}},
+	Volume = {122},
 	Year = {2015}}
 
 @article{jacobs1999,
 	Author = {Jacobs, R A},
 	Date-Added = {2015-09-18 19:38:26 +0000},
-	Date-Modified = {2015-09-18 19:38:27 +0000},
+	Date-Modified = {2015-09-28 22:09:39 +0000},
 	Journal = {Vision research},
+	Pages = {3621--3629},
 	Title = {{Optimal integration of texture and motion cues to depth}},
+	Volume = {39},
 	Year = {1999}}
 
 @article{tanenhaus1995,
@@ -178,10 +191,8 @@
 @article{mcclelland2006,
 	Author = {McClelland, James L and Mirman, Daniel and Holt, Lori L},
 	Date-Added = {2015-09-18 18:32:51 +0000},
-	Date-Modified = {2015-09-18 18:32:52 +0000},
+	Date-Modified = {2015-09-28 22:13:10 +0000},
 	Journal = {Trends in Cognitive Sciences},
-	Month = aug,
-	Number = {8},
 	Pages = {363--369},
 	Title = {{Are there interactive processes in speech perception?}},
 	Volume = {10},
@@ -219,20 +230,21 @@
 	Title = {Probabilistic reasoning in intelligent systems: Networks of plausible reasoning},
 	Year = {1988}}
 
-@inproceedings{gibson2013,
+@article{gibson2013,
 	Author = {Gibson, E and Bergen, L and Piantadosi, Steven T},
-	Booktitle = {Proceedings of the {\ldots}},
 	Date-Added = {2015-09-17 19:10:24 +0000},
-	Date-Modified = {2015-09-17 19:10:25 +0000},
+	Date-Modified = {2015-09-28 22:15:17 +0000},
+	Journal = {Proceedings of the National Academy of Sciences},
+	Pages = {8051--8056},
 	Title = {{Rational integration of noisy evidence and prior semantic expectations in sentence interpretation}},
+	Volume = {110},
 	Year = {2013}}
 
 @article{ernst2002,
 	Author = {Ernst, M O and Banks, M S},
 	Date-Added = {2015-09-17 19:04:49 +0000},
-	Date-Modified = {2015-09-17 19:04:50 +0000},
+	Date-Modified = {2015-09-28 22:16:06 +0000},
 	Journal = {Nature},
-	Number = {6870},
 	Pages = {429--433},
 	Title = {{Humans integrate visual and haptic information in a statistically optimal fashion}},
 	Volume = {415},
@@ -241,9 +253,8 @@
 @article{shannon1948,
 	Author = {Shannon, Claude E},
 	Date-Added = {2015-09-17 18:59:41 +0000},
-	Date-Modified = {2015-09-17 18:59:42 +0000},
+	Date-Modified = {2015-09-28 22:14:37 +0000},
 	Journal = {The Bell Systems Technical Journal},
-	Number = {3},
 	Pages = {379--423},
 	Title = {{A mathematical theory of cummunication}},
 	Volume = {XXVII},
@@ -252,9 +263,8 @@
 @article{trueswell1999,
 	Author = {Trueswell, J C and Sekerina, I and Hill, N M and Logrip, M L},
 	Date-Added = {2015-09-17 18:51:48 +0000},
-	Date-Modified = {2015-09-17 18:52:00 +0000},
+	Date-Modified = {2015-09-28 22:14:46 +0000},
 	Journal = {Cognition},
-	Number = {2},
 	Pages = {89--134},
 	Title = {{The kindergarten-path effect: Studying on-line sentence processing in young children}},
 	Volume = {73},
@@ -263,10 +273,8 @@
 @article{jaeger2010,
 	Author = {Jaeger, Florian T},
 	Date-Added = {2015-09-17 18:51:39 +0000},
-	Date-Modified = {2015-09-18 19:27:34 +0000},
+	Date-Modified = {2015-09-28 22:10:15 +0000},
 	Journal = {Cognitive Psychology},
-	Month = aug,
-	Number = {1},
 	Pages = {23--62},
 	Title = {{Redundancy and reduction: Speakers manage syntactic information density}},
 	Volume = {61},
@@ -275,10 +283,8 @@
 @article{levy2008,
 	Author = {Levy, Roger},
 	Date-Added = {2015-09-17 18:51:30 +0000},
-	Date-Modified = {2015-09-17 18:52:00 +0000},
+	Date-Modified = {2015-09-28 22:12:39 +0000},
 	Journal = {Cognition},
-	Month = mar,
-	Number = {3},
 	Pages = {1126--1177},
 	Title = {{Expectation-based syntactic comprehension}},
 	Volume = {106},
@@ -288,14 +294,12 @@
 	Abstract = {Listeners are exquisitely sensitive to fine-grained acoustic detail within phonetic categories for sounds and words. Here we show that this sensitivity is optimal given the probabilistic nature of speech cues. We manipulated the probability distribution of one probabilistic cue, voice onset time (VOT), which differentiates word initial labial stops in English (e.g., "beach" and "peach"). Participants categorized words from distributions of VOT with wide or narrow variances. Uncertainty about word identity was measured by four-alternative forced-choice judgments and by the probability of looks to pictures. Both measures closely reflected the posterior probability of the word given the likelihood distributions of VOT, suggesting that listeners are sensitive to these distributions.},
 	Author = {Clayards, Meghan and Tanenhaus, Michael K and Aslin, Richard N and Jacobs, Robert A},
 	Date-Added = {2015-09-17 18:51:23 +0000},
-	Date-Modified = {2015-09-17 18:52:00 +0000},
+	Date-Modified = {2015-09-28 22:17:34 +0000},
 	Doi = {10.1016/j.cognition.2008.04.004},
 	Journal = {Cognition},
 	Journal-Full = {Cognition},
 	Mesh = {Comprehension; Cues; Humans; Judgment; Models, Statistical; Pattern Recognition, Visual; Phonetics; Speech Acoustics; Speech Perception},
-	Month = {Sep},
-	Number = {3},
-	Pages = {804-9},
+	Pages = {804--809},
 	Pmc = {PMC2582186},
 	Pmid = {18582855},
 	Pst = {ppublish},
@@ -327,11 +331,12 @@
 	Volume = {6},
 	Year = {1963}}
 
-@inproceedings{jelinek1976,
+@article{jelinek1976,
 	Author = {Jelinek, F},
-	Booktitle = {Proceedings of the IEEE},
 	Date-Added = {2015-09-17 18:50:57 +0000},
-	Date-Modified = {2015-09-17 18:52:00 +0000},
+	Date-Modified = {2015-09-28 22:11:41 +0000},
+	Journal = {Proceedings of the {IEEE}},
 	Pages = {532--556},
 	Title = {{Continuous speech recognition by statistical methods}},
+	Volume = {64},
 	Year = {1976}}
